tests/mm0_mmu/fail/bad-sort321.mmu
-- bad modifier order
(sort s321 provable strict pure)